Resolved statusTable overflowed issue

--- a/client/src/style/statusTable.css
+++ b/client/src/style/statusTable.css
@@ -1,15 +1,8 @@
-/* .table-component{
-    display: relative;
-    margin: 30px 0px 30px 30px; 
-    background-color: rgb(237, 231, 243,0.4);
-} */
 table {
   border-collapse: separate;
   border-spacing: 20px 55px;
   background-color: rgb(193, 200, 226, 0.4);
-  margin-left: 30px;
-  margin-top: 30px;
-  margin-right: 30px;
+  margin: 15px 30px;
 }
 .table thead {
   padding: 20px;
@@ -23,6 +16,5 @@ table {
 }
 
 .spend {
-  padding-left: 10px;
   margin-left: 30px;
 }
